--- a/src/style.css
+++ b/src/style.css
@@ -160,8 +160,7 @@ ul {
 }
 
 .dark-gradient-b{
-    background: #485563;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #102438, #485563);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #102438, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background: #485563;
+    background: -webkit-linear-gradient(to right, #102438, #485563);
+    background: linear-gradient(to right, #102438, #485563);
 }
